lib/tests/fixtures/compiler/evaluation/new_invalid_tuple.baseline
Error: new_invalid_tuple.pp:1:14: node 'test': cannot convert Undef to Array.
  notice Tuple(undef)
               ^~~~~
  backtrace:
    in 'new' (no source)
    in '<class main>' at new_invalid_tuple.pp:1
